--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
 <body>
 
     <!-- all scripts go here -->
+    <script src="js/librarys/d3.js"></script>
     <script src="js/data.js"></script>
 </body>
 </html>
