generate pie charts

--- a/src/index.html
+++ b/src/index.html
@@ -9,5 +9,7 @@
     <!-- all scripts go here -->
     <script src="js/librarys/d3.js"></script>
     <script src="js/data.js"></script>
+    <script src="js/chart-generations.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
