change between local relevances on evidence set 3&4

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,13 @@
         <div class="item a"><div id="area1"></div></div>
         <div class="item b"><div id="area2"></div></div>
         <div class="item c"><div id="area3"></div></div>
-        <div class="item d"><div id="area4"></div></div>
+        <div class="item d">
+            <div id="area4"></div>
+            <div id="local-relevance-buttons">
+                <button data-index="0">1</button>
+                <button data-index="1">2</button>
+            </div>
+        </div>
         <div class="radio">
             <input type="radio" id="es1" name="evidence-set" value="1">
             <label for="es1">Evidence Set 1</label><br>
